--- a/analyzeApplyExtend/apply/index.html
+++ b/analyzeApplyExtend/apply/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <!-- Christian Morgan, 10/25/22-->
-<html lang="en">
+<html lang="zxx">
 <head>
 	<title>Webpage Design</title>
 	<meta charset="utf-8">
     <link rel="stylesheet" href="css/apply07.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
+		<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="images/apple-touch-icon.png">
+		<link rel="shortcut icon" sizes="192x192" href="images/android-chrome-192.png">
 </head>
 <body>
 
@@ -61,7 +64,7 @@
 
         <!-- Use the footer area to add webpage footer content -->
         <footer>
-            <p>Designed by: Student's Name</p>
+            <p>Designed by: Christian Morgan</p>
         </footer>
 
 	</div>
