--- a/analyzeApplyExtend/extend/extend07.html
+++ b/analyzeApplyExtend/extend/extend07.html
@@ -6,10 +6,9 @@
 	<meta charset="utf-8">
     <link rel="stylesheet" href="css/styles07.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="manifest" href="/site.webmanifest">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
+		<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="images/apple-touch-icon.png">
+		<link rel="shortcut icon" sizes="192x192" href="images/android-chrome-192.png">
 </head>
 <body>
 
@@ -60,7 +59,7 @@
 
         <!-- Use the footer area to add webpage footer content -->
         <footer>
-            <p>Designed by: Student's Name</p>
+            <p>Designed by: Christian Morgan</p>
         </footer>
 
 	</div>
